# condorterm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: README.md
src/: main.rs
src/components/: instrument_panel.rs  mod.rs
src/components/instruments/: accelerometer.rs  airspeed.rs  altimeter.rs  clock.rs  compass.rs  mod.rs  slip.rs  vario.rs
src/components/instruments/shared/: label.rs  mod.rs  string.rs  style.rs
src/data/: client.rs  mod.rs  random.rs  udp.rs
src/utils/: decimal_hours.rs  fractions.rs  mod.rs
