[package]
name = "condorterm"
description = "Terminal UI (TUI) for Condor soaring simulator"
version = "0.0.1"
edition = '2021'
license = "MIT"
publish = false

[dependencies]
iocraft = "0.5.2"
smol = "2.0.2"
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
rand = "0.8.5"
chrono = "0.4.39"